--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Abril+Fatface&family=Aleo:wght@200;400&family=Antic+Didone&family=Bebas+Neue&family=Cormorant+Garamond:wght@300&family=Montserrat&family=Oswald:wght@500&family=Raleway:wght@100;400;600&display=swap');
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
