--- a/src/components/DonationRequest/DonationRequest.css
+++ b/src/components/DonationRequest/DonationRequest.css
@@ -30,6 +30,15 @@
     margin-bottom: .2em;
 }
 
+.description-container h2 {
+    font-family: Antic Didone;
+    color: black;
+    line-height: 1.6em;
+    font-size: 2.5em;
+    text-align: center;
+    margin-top: 0;
+}
+
 .description-container p {
     font-family: 'montserrat';
     line-height: 1.6em;
@@ -61,9 +70,10 @@
 
 .request-form-container h2 {
     font-family: Antic Didone;
+    color: black;
 }
 
-.form-input,
+.request-form-input,
 .project-form-label {
     font-family: 'montserrat';
     font-size: 1.3em;
@@ -74,7 +84,7 @@
     margin-top: 2em;
 }
 
-.form-input {
+.request-form-input {
     margin-top: .75em;
 }
 
