--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,11 +1,26 @@
 .login-form-container {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
     background-color: #0000008f;
+    z-index: 9999; */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
 }
+
+.login-form-container.active {
+    display: flex; /* Show the login form when the active class is applied. */
+  }
 
 h2 {
     font-family: 'montserrat';
