Add logic to log in single user and retrieve their data

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -19,7 +19,7 @@
 }
 
 .login-form-container.active {
-    display: flex; /* Show the login form when the active class is applied. */
+    display: flex; 
   }
 
 h2 {
