--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -88,3 +88,19 @@
 .extra {
     margin-top: 300px;
 }
+
+.donation-offer {
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    font-family: 'montserrat';
+    font-size: 1.2em;
+    color: white;
+    background: #025779;
+    border-radius: 25px;
+    border: none;
+    height: 2em;
+    width: 13em;
+    margin-bottom: 2em;
+    cursor: pointer;
+}
