--- a/src/components/DonationOffer/DonationOffer.css
+++ b/src/components/DonationOffer/DonationOffer.css
@@ -1,19 +1,40 @@
 .donation-offer-hero-container{
     display: flex;
     margin-top: 7.5em;
+    height: 21em;
 }
 
-/* .donation-offer-hero-container h2 {
-    font-size: 2em;
-} */
+.offer-donation-description-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    width: 100%;
+    background-color: #E1EFF4;
+    
+}
 
-.image-container {
-    width: 50%;
-    height: 100%;
+.offer-donation-description-container h2 {
+    font-family: Antic Didone;
+
+}
+
+.offer-donation-description-container p {
+    font-family: 'montserrat';
+    padding: 15px;
+    padding-left: 30px;
+
+}
+
+.hero-image-container{
+    height: 20em;
+    margin: 0;
+    width: auto;
+    background:rgb(225, 239, 244);
 }
 
 .hero-img {
-    height: 20em;
+    height: 21em;
     width: auto;
 }
 
