--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -129,11 +129,19 @@
 .artist-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     justify-content: flex-end;
     width: 50%;
     padding-bottom: 4em;
     padding-left: 2em;
+}
+
+.artist-heading-container{
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .artist-heading{
@@ -148,18 +156,16 @@
 .quote-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
 
-    width: 60%;
+    width: 30%;
     height: 100%;
 
-    /* padding: .8em; */
+}
 
-    background-image: url("/src/assets/quote.png");
-    background-repeat: no-repeat;
-    background-position: -5% -7%;    
-    background-size: 100%;
+.quote-container img {
+    height: 27em;
 }
 
 .quote {
