--- a/src/components/DonationRequest/DonationRequest.css
+++ b/src/components/DonationRequest/DonationRequest.css
@@ -62,7 +62,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 80vh;
+    height: 100%;
     align-items: center;
     justify-content: center;
     margin-top: -4em;
@@ -74,14 +74,15 @@
     align-items: center;
 
     width: 80%;
-    height: 65%;
-
+    height: auto;
+    margin-bottom: 3em;
     background-color: #F8D59D;
 }
 
 .request-form-container h2 {
     font-family: Antic Didone;
     color: black;
+    margin-top: 3em;
 }
 
 .request-form-input,
