--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -107,6 +107,8 @@
     padding-left: 5em;
     padding-right: 5em;
     margin-bottom: .2em;
+    box-shadow: 0px 11px 20px 8px  #0257799e;
+
 }
 
 .description-two-container h2 {
