--- a/src/components/CommunityBoard/CommunityBoard.css
+++ b/src/components/CommunityBoard/CommunityBoard.css
@@ -1,7 +1,7 @@
 .community-board {
     display: flex;
     width: 100%;
-    
+    height: 100vh !important;
 }
 
 .community-board-heading-container{
@@ -18,6 +18,7 @@
     align-items: center;
     margin-top: 7.5em;
     width: 75%;
+    height: 100vh !important;
 }
 
 .cards-container {
@@ -28,7 +29,7 @@
 }
 
 
-.test {
+/* .test {
     margin-top: 7.5em;
     color: black;
-}
+} */
