--- a/src/components/FilterForm/FilterForm.css
+++ b/src/components/FilterForm/FilterForm.css
@@ -6,7 +6,7 @@
     margin-top: 7.5em;
     background-color: #F8D59D;
     width: 25%;
-    height: 100vh;
+    height: 100%;
 }
 
 .form-heading {
@@ -17,13 +17,22 @@
 form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+    padding: 1em;
+    border: solid black .5em;
     align-items: center;
     background-color: white;
     width: 15em;
     height: 15em;
     margin-bottom: 2em;
-    margin-top: 2em;
+    /* margin-top: 2em; */
+}
+
+.input-label-wrapper {
+    display: flex;
+    align-items: flex-start;
+    width: 100%;
+    justify-content: flex-start;
 }
 
 label {
@@ -36,4 +45,12 @@ button {
     font-family: 'montserrat';
     margin-top: 1em;
     padding: .5em;
+}
+.no-donations-section,
+.first-donations-section {
+    display: flex;
+    width: 100%;
+    margin-top: .5em;
+    margin-bottom: .5em;
+
 }
