--- a/src/components/CommunityBoard/CommunityBoard.css
+++ b/src/components/CommunityBoard/CommunityBoard.css
@@ -1,3 +1,38 @@
+.community-board {
+    display: flex;
+    width: 100%;
+    height: 100vh !important;
+}
+
+.community-board-heading-container{
+    display: flex;
+    background-color: #F8D59D;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
 .all-donation-requests-container {
-    margin-top: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 7.5em;
+    width: 75%;
+    height: 100vh !important;
+}
+
+.cards-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 75%;
+}
+
+.none-found {
+    display: flex;
+    margin-top: 2em;
+    font-family: 'montserrat';
+    padding: 15px;
+    padding-left: 30px;
+    font-size: 1.4em;
 }
