--- a/src/components/CommunityBoard/CommunityBoard.css
+++ b/src/components/CommunityBoard/CommunityBoard.css
@@ -1,3 +1,9 @@
 .all-donation-requests-container {
-    margin-top: 300px;
+    /* margin-top: 300px; */
+    /* display: flex; */
+}
+
+.community-board-container {
+    display: flex;
+    margin-top: 200px;
 }
