--- a/src/components/DonationRequest/DonationRequest.css
+++ b/src/components/DonationRequest/DonationRequest.css
@@ -1,6 +1,6 @@
 .hero-container {
     display: flex;
-    margin-top: 7.5em;
+    margin-top: 8em;
     width: 100%;
 }
 
@@ -65,7 +65,6 @@
     height: 80vh;
     align-items: center;
     justify-content: center;
-    margin-top: -4em;
 }
 
 .request-form {
@@ -124,4 +123,8 @@
     width: 17em;
     margin-top: 4em;
     cursor: pointer;
+}
+
+.project-submit-button:hover {
+    transform: scale(1.1);
 }
