--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -9,17 +9,20 @@ h2 {
     font-family: 'montserrat';
     font-size: 2em;
     color: black;
+    margin-bottom: 5px;
 }
 
 .login-form {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     background-color: rgb(225, 239, 244);
     padding: 2em;
     border-radius: 1em;
     gap: 1em;
+    width: 25em;
+    height: 29em;
 }
 
 .login-form-label {
@@ -36,13 +39,24 @@ h2 {
 }
 
 .login-button {
-    font-size: 1.2em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family: 'montserrat';
+    font-size: 1.8em;
     color: white;
     background: #025779;
     border-radius: 25px;
     border: none;
-    height: 3em;
-    width: 100%;
+    height: 2em;
+    width: 13em;
+    margin-bottom: 2em;
+    cursor: pointer;
     text-decoration: none;
+    padding: 10px;
+    margin-top: 1em;
+}
+
+.login-button:hover {
+    transform: scale(1.1);
 }
