--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -1,4 +1,30 @@
 .error-message {
-    margin-top: 500px;
-    size: 20px;
+    font-size: 2em;
+}
+
+.error-container {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #0257797b;
+}
+
+.center-link {
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    font-family: 'montserrat';
+    font-size: 1em;
+    color: white;
+    background: #025779;
+    border-radius: 25px;
+    border: none;
+    height: 2em;
+    width: 9em;
+    margin-bottom: 2em;
+    cursor: pointer;
+    text-decoration: none;
 }
