--- a/src/components/DonationRequest/DonationRequest.css
+++ b/src/components/DonationRequest/DonationRequest.css
@@ -1,6 +1,6 @@
 .hero-container {
     display: flex;
-    margin-top: 8em;
+    margin-top: 7.5em;
     width: 100%;
 }
 
@@ -62,9 +62,10 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 80vh;
+    height: 100%;
     align-items: center;
     justify-content: center;
+    margin-top: -4em;
 }
 
 .request-form {
@@ -73,21 +74,48 @@
     align-items: center;
 
     width: 80%;
-    height: 65%;
-
+    height: auto;
+    margin-bottom: 3em;
     background-color: #F8D59D;
 }
 
 .request-form-container h2 {
     font-family: Antic Didone;
     color: black;
+    margin-top: 3em;
 }
 
-.request-form-input,
 .project-form-label {
     font-family: 'montserrat';
     font-size: 1.3em;
-    width: 15em;
+    width: 25em;
+
+}
+
+.title {
+    font-family: 'montserrat';
+    font-size: 1.3em;
+    width: 25em;
+    margin-left: 1em;
+}
+
+.money {
+    font-family: 'montserrat';
+    font-size: 1.3em;
+    width: 10em;
+    margin-left: 1em;
+
+}
+
+.details {
+    font-family: 'montserrat';
+    font-size: 1.3em;
+    width: 25em;
+    height: 5em;
+    line-height: 5rem;
+    margin-left: 1em;
+    overflow-wrap: break-word;
+
 }
 
 .project-form-label {
@@ -103,12 +131,19 @@
     width: 100%;
 }
 
-.project-details-one-container,
-.project-details-two-container {
+.project-details-one-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    padding-left: 1em;
+    width: 50%;
+}
 
+.project-details-two-container  {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 4em;
     width: 50%;
 }
 
@@ -121,10 +156,13 @@
     border: none;
     height: 2em;
     width: 17em;
-    margin-top: 4em;
+    margin-top: 1em;
+    margin-bottom: 1em;
     cursor: pointer;
 }
 
-.project-submit-button:hover {
-    transform: scale(1.1);
+.old-painter {
+    margin-bottom: 0;
+    margin-left: 10em;
+    width: 20em;
 }
